core/ui/gli.css
/* ... */
.window-left
{
    float: left;
    width: 151px;
    margin-left: 1px !important;
    background-color: #dee4ea;
    border-right: 1px solid #b4b4b4;
    height: 100%;
}

.window-left-listing
{
    height: 100%;
    overflow: auto;
}

.window-left-toolbar
{
    /*height: 20px;*/
    height: 0px;
    background-color: Navy;
    display: none;
    visibility: collapse;
}

.window-right-outer
{
    margin-left: -310px !important; /* -2 * window-right.width */
    width: 100%;
    height: 100%;
    float: right;
}
.window-right
{
    margin-left: 155px !important;
    background-color: Aqua;
    float: right;
    height: 100%;
}
.window-right-inner
{
    position: absolute;
    top: 0px;
    left: 151px; /* window-left.width */
    right: 0px;
    margin-left: 2px !important;
    float: right;
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    color: Black;
}

.window-whole-outer
{
    width: 100%;
    height: 100%;
}
.window-whole
{
    background-color: white;
    height: 100%;
}
.window-whole-inner
{
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    color: Black;
}

.window-trace-outer
{
    margin-left: -480px !important; /* -2 * window-inspector.width */
    width: 100%;
    height: 100%;
    float: right;
}
.window-trace
{
    margin-left: 240px !important; /* window-inspector.width */
    background-color: white;
    height: 100%;
}

.window-trace-inspector
{
    float: right;
    width: 240px;
    background-color: #dee4ea;
    border-left: 1px solid #b4b4b4;
    height: 100%;
}

.window-texture-outer
{
    margin-left: -800px !important; /* -2 * window-texture-inspector.width */
    width: 100%;
    height: 100%;
    float: right;
    overflow: auto;
}
.window-texture
{
    margin-left: 400px !important; /* window-texture-inspector.width */
    background-color: white;
    height: 100%;
}

.window-texture-inspector
{
    float: right;
    width: 400px;
    background-color: #dee4ea;
    border-left: 1px solid #b4b4b4;
    height: 100%;
    position: absolute;
    top: 0px;
    bottom: 0px;
    right: 0px;
}


.window-bottom
{
    clear: both;
    border-top: 1px solid #515151;
    background-image: url(assets/window-bottom-span.png);
    background-repeat: repeat-x;
    height: 24px;
}
.window-bottom-left
{
    display: inline;
    float: left;
    position: relative;
    left: 0px;
    background-image: url(assets/window-bottom-left.png);
    width: 5px;
    height: 24px;
}
.window-bottom-right
{
    display: inline;
    float: right;
    position: relative;
    right: 0px;
    background-image: url(assets/window-bottom-right.png);
    width: 5px;
    height: 24px;
}



.listing-item
{
    clear: both;
    border-bottom: 1px solid #9f9f9f;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    text-align: left;
    color: Black;
    position: relative;
    font-family: 'Courier New', 'Courier New', monospace;
    font-size: 10pt;
    padding: 1px !important;
}
.listing-item-selected
{
    background-color: #3875d7;
    color: White !important;
}



.frame-item
{
}
.frame-item-selected
{
}
.frame-item-preview canvas
{
    border-radius: 1px;
    margin-left: 2px !important;
    margin-top: 2px !important;
}
.frame-item-number
{
    position: absolute;
    top: 0px;
    right: 0px;
}



.trace-minibar
{
    background-image: url(assets/minibar-span.png);
    background-repeat: repeat-x;
    border-bottom: 1px solid #9f9f9f;
    height: 19px;
    position: absolute;
    top: 0px;
    left: 153px;
    right: 240px; /* window-trace-inspector */
    margin-right: 2px !important;
}

.trace-minibar-button
{
    display: inline;
    width: 16px;
    height: 19px;
    background-repeat: no-repeat;
    background-position: center top;
    float: left;
    -webkit-user-select: none;
    -moz-user-select: none;
    padding-left: 5px !important;
    padding-right: 5px !important;
}
.trace-minibar-button-enabled
{
    cursor: pointer;
}
.trace-minibar-button-disabled
{
    cursor: auto;
}
.trace-minibar-command-run
{
    background-image: url(assets/minibar-command-run.png);
}
.trace-minibar-command-step-forward
{
    background-image: url(assets/minibar-command-next.png);
}
.trace-minibar-command-step-back
{
    background-image: url(assets/minibar-command-prev.png);
}
.trace-minibar-command-step-until-draw
{
    background-image: url(assets/minibar-command-rununtil.png);
}
.trace-minibar-command-step-until-error
{
    background-image: url(assets/minibar-command-rununtil.png);
}
.trace-minibar-command-restart
{
    background-image: url(assets/minibar-command-run.png);
}

.trace-listing
{
    position: absolute;
    top: 20px; /* trace-minibar.height */
    bottom: 0px;
    left: 153px;
    right: 240px; /* window-trace-inspector */
    margin-right: 2px !important;
    overflow: auto;
}

.trace-call
{
    clear: both;
    height: 17px;
    color: Black;
    white-space: nowrap;
    border-top-width: 1px;
    border-bottom-width: 1px;
    border-left-width: 0px;
    border-right-width: 0px;
    border-style: solid;
    border-color: transparent;
}
.trace-call-highlighted
{
    /*border: 1px dashed red;*/
    border-color: #2f84eb;
    background-color: #bfd9f9;
}
.trace-call-icon
{
    float: left;
    width: 16px;
    height: 16px;
    background-repeat: no-repeat;
}
.trace-call-icon-error
{
    background-color: Red;
}
.trace-call-icon-active
{
    background-image: url(assets/gutter-arrow.png);
    background-position: 50% 50%;
}
.trace-call-line
{
    font-family: "Courier New" , "Courier New" , monospace;
    font-size: 12px;
    margin-top: 2px !important;
}
.trace-call-clickable
{
    cursor: pointer;
    color: #3875D7;
}
.trace-call-timing
{
    float: right;
    display: none;
}


.trace-inspector-canvas
{
    border: 0px;
    background-color: White !important;
    background-image: url(assets/grid.png);
    background-repeat: repeat;
}
/* ... */

